# back-quasar

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requiremets.txt
core/: settings.py  urls.py
